# kagi-search-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/kagi_mcp/: config.py  kagi.py  server.py  test_api.py
src/web_search_mcp/: kagi.py  server.py
